<resources>
    <!-- Max recording time preference -->
    <string-array name="max_time_entries">
        <item>1 minutes</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>no limit</item>
    </string-array>

    <string-array name="max_time_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>-1</item>
    </string-array>

    <!-- Min recording time preference -->
    <string-array name="min_time_entries">
        <item>no limit</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
    </string-array>

    <string-array name="min_time_values">
        <item>-1</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>59</item>
    </string-array>

    <!-- Recording retention time preference -->
    <string-array name="retention_time_entries">
        <item>48 hours</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>Until manual deletion</item>
    </string-array>

    <string-array name="retention_time_values">
        <item>2</item>
        <item>7</item>
        <item>14</item>
        <item>21</item>
        <item>-1</item>
    </string-array>

    <!-- Bitrate preference -->
    <!-- Currently a placeholder until we figure out values -->
    <string-array name="bitrate_entries">
        <item>1000 kbps</item>
        <item>2000 kbps</item>
        <item>3000 kbps</item>
        <item>4000 kbps</item>
        <item>5000 kbps</item>
    </string-array>

    <string-array name="bitrate_values">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
    </string-array>

    <!-- Recording severity threshold preference -->
    <string-array name="severity_threshold_entries">
        <item>1/10</item>
        <item>2/10</item>
        <item>3/10</item>
        <item>4/10</item>
        <item>5/10</item>
        <item>6/10</item>
        <item>7/10</item>
        <item>8/10</item>
        <item>9/10</item>
        <item>10/10</item>
    </string-array>

    <string-array name="severity_threshold_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="sort_recordings">
        <item>Severity</item>
        <item>Most Recent</item>
        <item>Least Recent</item>
    </string-array>

</resources>