<resources>
    <string name="app_name">Smart I companion app</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="recordings_header">Recording Settings</string>
    <string name="notifications_header">Notifications</string>

    <!-- Recordings Preferences -->
    <string name="Max_time_title">Maximum recording length</string>
    <string name="Min_time_title">Minimum recording length</string>
    <string name="Retention_time_title">Retain recordings for:</string>
    <string name="bitrate_title">Video bitrate</string>

    <!-- Notification Preferences -->
    <string name="Push_notifications_title">Enable push notifications</string>
    <string name="Physical_notifications_title">Enable physical notifications</string>
    <string name="Severity_title">Severity threshold for notifications</string>

    <string name="title_activity_recordings">ScrollingActivity</string>

    <string name="action_settings">Settings</string>

    <string name="connect_button">connect</string>
    <string name="settings_button">settings button</string>
    <string name="default_settings_button">default</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="usb">USB</string>
    <string name="settings_option">Settings Option</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="bypass_bluetooth">Bypass Bluetooth and download recordings</string>
    <string name="connect_to_camera">Connect to Camera</string>
    <string name="view_rec_button">View recordings</string>
    <string name="download_recordings">Download Recordings</string>
</resources>